hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics8.php.like_types.exp
File "tconst_on_generics8.php", line 60, characters 21-30:
Invalid argument (Typing[4110])
File "tconst_on_generics8.php", line 65, characters 28-38:
Expected ~Contra<int> because it is an unenforceable type
File "tconst_on_generics8.php", line 50, characters 27-36:
But got Contra<[unresolved]>
